// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Styles/Position > handles responsive value 1`] = `
{
  "classNames": [
    "_--position-absolute_aeaee9",
    "_--position-fixed--l_aeaee9",
  ],
}
`;

exports[`Styles/Position > handles undefined value 1`] = `null`;

exports[`Styles/Position > handles value 1`] = `
{
  "classNames": [
    "_--position-absolute_aeaee9",
  ],
}
`;
